# tias-do-zap

./: .gitignore  LICENSE  README.md  log4j2.properties  pyproject.toml
grupinho/creuza_conecta/: base.py  brasil_api_cnpj.py  camara_ceap.py  camara_deputados.py  transparencia_base.py  transparencia_ceis.py  transparencia_cnep.py  transparencia_contratos.py  transparencia_emendas.py  transparencia_servidores.py
grupinho/dulce_config/: config.py  logging.py
grupinho/fatima_cli/: cida.py  rosa.py
grupinho/marlene_pipeline/: enriquecimento.py
grupinho/marli_analisa/: base.py  despesa_analise.py  fornecedor_analise.py  sancoes_analise.py
grupinho/marli_analisa_spark/: despesa_analise.py  fornecedor_analise.py  sancoes_analise.py
grupinho/neide_investiga/: consultas.py
grupinho/shirley_transforma/: base.py
grupinho/shirley_transforma/gold/: dim_builders.py  fact_builders.py
grupinho/shirley_transforma/gold_spark/: dim_builders.py  fact_builders.py
grupinho/shirley_transforma/silver/: ceap_transformer.py  cnpj_transformer.py  deputados_transformer.py  emendas_transformer.py
grupinho/shirley_transforma/silver_spark/: ceap_transformer.py  cnpj_transformer.py  deputados_transformer.py  emendas_transformer.py
lourdes_documenta/: apis.md  architecture.md  commands.md
