[project]
name = "grupinho"
version = "0.6.0"
description = "Lakehouse das Tias do Zap pra investigar gastos públicos de parlamentares."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Yuri"}
]

dependencies = [
    "httpx>=0.27.0",
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "delta-spark==4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
Tias_do_Zap = "grupinho.fatima_cli.cida:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
